--- a/index.html
+++ b/index.html
@@ -24,15 +24,14 @@
         <div class="box2 onlywide animated bounceOutRight" style="animation-delay:1.8s;"></div>
         <div class="box2 onlywide animated bounceOutRight" style="animation-delay:1.7s;"></div>
     </div>
-    <a id="about" onclick="showabout()" class="animated fadeIn" style="animation-delay:2.2s;">about</a>
-    <a id="work" onclick="showwork()" class="animated fadeIn" style="animation-delay:2.2s;">work</a>
+    <a id="about" onclick="showabout()" class="animated fadeIn" style="animation-delay:2.2s;">About</a>
+    <a id="work" onclick="showwork()" class="animated fadeIn" style="animation-delay:2.2s;">Work</a>
     <div id="middle" class="animated slideInDown" style="animation-delay:2.0s;">
         <h1>Yash D</h1>
         <h2>Software Developer /Biological Being</h2>
         <div id="menu">
-            <a onclick="showabout()">about</a>
-            <a onclick="showwork()">work</a>
-            <a onclick="showcontact()">contact</a>
+            <a onclick="showabout()">About</a>
+            <a onclick="showwork()">Work</a>
         </div>
         
     </div>
@@ -71,9 +70,6 @@
                 </p>
             </section>
         </div>
-          <div id="footer-2">
-           <p>Contact me on my Github</p> 
-          </div>
         <div id="footer">
             <p>Made on the rocky terrain called earth <br> <a href="https://github.com/yashd-dev">yashd-dev</a></p> 
         </div>
