--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <a id="work" onclick="showwork()" class="animated fadeIn" style="animation-delay:2.2s;">Work</a>
     <div id="middle" class="animated slideInDown" style="animation-delay:2.0s;">
         <h1>Yash D</h1>
-        <h2>Software Developer /Biological Being</h2>
+        <h2>Software Developer</h2>
         <div id="menu">
             <a onclick="showabout()">About</a>
             <a onclick="showwork()">Work</a>
@@ -47,7 +47,7 @@
                 <div><i class="fas fa-circle"></i>&nbsp;Python</div>
                 <div><i class="fas fa-circle"></i>&nbsp;Java</div>
                 <div><i class="fas fa-circle"></i>&nbsp;Postgresql</div>
-                <div><i class="fas fa-circle"></i>&nbsp;Firebase</div>
+                <div><i class="fas fa-circle"></i>&nbsp;Linux</div>
             </div>
         </section>
     </div>
@@ -66,12 +66,12 @@
             <section>
                 <h2>Skilllset</h2>
                 <p>
-                    Expertise in Python,Have knowledge about Java,Postgresql and Firebase 
+                    Expertise in Python and Linux,Have knowledge about Java, Postgresql and MongoDB 
                 </p>
             </section>
         </div>
         <div id="footer">
-            <p>Made on the rocky terrain called earth <br> <a href="https://github.com/yashd-dev">yashd-dev</a></p> 
+            <p>Made by : <br> <a href="https://github.com/yashd-dev">yashd-dev</a></p> 
         </div>
     <script src="index.js" type="text/javascript"></script>
     <script src="particles.js"></script>
