Moddified some information

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             </p>
             <div id="used">
                 <div><i class="fas fa-circle"></i>&nbsp;Python</div>
-                <div><i class="fas fa-circle"></i>&nbsp;MongoDB</div>
                 <div><i class="fas fa-circle"></i>&nbsp;Linux</div>
+                <div><i class="fas fa-circle"></i>&nbsp;SQL</div>
             </div>
         </section>
     </div>
@@ -59,12 +59,6 @@
                     I am Yash Deshande, 17. Currently a Student at NMIMS, Mukesh Patel School Of Technology Management & Engineering - Mumbai
                 </p>
 
-            </section>
-            <section>
-                <h2>Skilllset</h2>
-                <p>
-                    Novice in Python and Linux, have basic knowledge about MongoDB 
-                </p>
             </section>
         </div>
         <div id="footer">
