--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <section>
                
                 <p>
-                    I am Yash Deshande, 17. Currently a Student at NMIMS, Mukesh Patel School Of Technology Management & Engineering - Mumbai
+                    I am Yash Deshpande, 17. Currently a Student at NMIMS, Mukesh Patel School Of Technology Management & Engineering - Mumbai
                 </p>
 
             </section>
