--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
             </p>
             <div id="used">
                 <div><i class="fas fa-circle"></i>&nbsp;Python</div>
-                <div><i class="fas fa-circle"></i>&nbsp;Linux</div>
-                <div><i class="fas fa-circle"></i>&nbsp;SQL</div>
+                <div><i class="fas fa-circle"></i>&nbsp;GNU/Linux</div>
             </div>
         </section>
     </div>
